test_suite/alan-2022-examples/failing/001170_mutation.alan
source m5 begin boolean or w; relax end
